--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.7"
 PyDriller = "^1.15.5"
 spacy = "^3.0.5"
 nltk = "^3.6.1"
+pandas = "^1.1.5"
+scikit-learn = "^0.24.1"
 
 [tool.poetry.dev-dependencies]
 
